edit index.html : add close-btn

--- a/index.html
+++ b/index.html
@@ -295,6 +295,18 @@
         }
         .modal-text h2 { color: var(--red); margin-bottom: 8px; }
 
+        .close-btn {
+            position: absolute;
+            top: -3px;
+            right: 4px;
+            font-size: 1.6rem;
+            color: var(--text-white);
+            text-decoration: none;
+            line-height: 1;
+        }
+
+        .close-btn:hover { color: var(--red);}
+
         .bg-click-close {   
             position: absolute;
             top: 0;
@@ -572,6 +584,7 @@
     </section>
     <div id="p1" class="modal-overlay">
         <div class="modal-window">  
+            <a href="#portfolio" class="close-btn">&times;</a>
             <div class="modal-image">
                 <img src="femboybanner2.jpg" style="width:33%; max-height:300px; object-fit:contain;">
                 <img src="femboybanner.jpg" style="width:33%; max-height:300px; object-fit:contain;">
@@ -588,6 +601,7 @@
 
     <div id="p2" class="modal-overlay">
         <div class="modal-window">
+            <a href="#portfolio" class="close-btn">&times;</a>
             <div class="modal-image">
                 <img src="gameiconic.png" style="width:33%; max-height:300px; object-fit:contain;">
                 <img src="gamecontent1.png" style="width:33%; max-height:300px; object-fit:contain;">
@@ -604,6 +618,7 @@
 
     <div id="p3" class="modal-overlay">
         <div class="modal-window">
+            <a href="#portfolio" class="close-btn">&times;</a>
             <div class="modal-image">
                 <img src="visualcon2.png" style="width:33%; max-height:300px; object-fit:contain;">
                 <img src="visualcon1.png" style="width:33%; max-height:300px; object-fit:contain;">
@@ -620,6 +635,7 @@
 
     <div id="p4" class="modal-overlay">
         <div class="modal-window">
+            <a href="#portfolio" class="close-btn">&times;</a>
             <div class="modal-image">
                 <img src="AUTOicon.png" style="width:33%; max-height:300px; object-fit:contain;">
                 <img src="autocontent1.png" style="width:33%; max-height:300px; object-fit:contain;">
@@ -636,6 +652,7 @@
 
     <div id="p5" class="modal-overlay">
         <div class="modal-window">
+            <a href="#portfolio" class="close-btn">&times;</a>
             <div class="modal-image">
                 <img src="web1.png" style="width:33%; max-height:300px; object-fit:contain;">
                 <img src="web2.png" style="width:33%; max-height:300px; object-fit:contain;">
@@ -654,6 +671,7 @@
 
     <div id="p6" class="modal-overlay">
         <div class="modal-window">
+            <a href="#portfolio" class="close-btn">&times;</a>
             <div class="modal-image">
                 <img src="femboybanner2.jpg" style="width:33%; max-height:300px; object-fit:contain;">
                 <img src="femboybanner.jpg" style="width:33%; max-height:300px; object-fit:contain;">
